// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders correctly with data-testid 1`] = `
[
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="test"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top hasTooltip"
    >
      <div
        className="tooltip dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="content"
        >
          test
        </div>
      </div>
      <div
        className="arrow arrow dark"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with hideWhenReferenceHidden 1`] = `
[
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={null}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top hasTooltip"
    >
      <div
        className="tooltip dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="content"
        >
          test
        </div>
      </div>
      <div
        className="arrow arrow dark"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with position 1`] = `
[
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent left hasTooltip"
    >
      <div
        className="tooltip dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="content"
        >
          test
        </div>
      </div>
      <div
        className="arrow arrow dark"
        data-placement="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with style 1`] = `
[
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top hasTooltip"
    >
      <div
        className="tooltip dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "width": "200px",
          }
        }
      >
        <div
          className="content"
        >
          test
        </div>
      </div>
      <div
        className="arrow arrow dark"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with theme 1`] = `
[
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top hasTooltip"
    >
      <div
        className="tooltip primary"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="content"
        >
          test
        </div>
      </div>
      <div
        className="arrow arrow primary"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with withoutDialog 1`] = `
<div
  className="tooltip dark"
>
  <div
    className="content"
  >
    test
  </div>
</div>
`;

exports[`Tooltip renders correctly without arrow 1`] = `
[
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden={false}
    data-testid="tooltip"
    onClickCapture={[Function]}
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent top"
    >
      <div
        className="tooltip dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="content"
        >
          test
        </div>
      </div>
    </div>
  </span>,
]
`;
